Fixed background color on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ body {
 }
 
 #tray {
-    background-color: #EAE0D4;
+    background: #EAE0D4;
     width: 70%;
     margin: auto;
     border: 20px dashed #FAFAFA;
@@ -219,7 +219,7 @@ p a:hover {
     }
     
     #tray {
-        background-color: rgba(244, 237, 228, 0.8);
+        background: #EAE0D4;
         width: 90%;
         border: 20px dashed #FAFAFA;
         border-top-style: none;
